# TradingSystem

./: .gitignore  .pre-commit-config.yaml  README.md  autotyping.sh  error.txt  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  type_info.json
.github/workflows/: lint.yml  tests.yml
docs/: contributing.md  index.md  installation.md  quickstart.md  requirements.txt  testing.md  ui.md
simple_ui/: index.html  index.js
trading/: main.py  websocket_server.py
trading/diagrams/: exchange_logic.plantuml
trading/lib/: in_memory_repository.py
trading/models/: __init__.py  asset.py  assets.py  client.py  constants.py  exchange_manager.py  heap_tests.py  heaps.py  limit_order.py  main.py  market_maker.py  market_order.py  money.py  order.py  order_flow.py  order_matching_engine.py  orderbook.py  portfolio.py  portfolio_stock.py  stock_exchange.py  stock_market_listing.py  transaction.py  transaction_history.py  user.py
trading/models/Assets/: stock_market_listing.py
trading/models/Exchange/: exchange_manager.py  live_stock_exchange.py  stock_exchange.py  stock_exchange_decorator.py
trading/models/Heaps/: execution_queue.py  priority_queue.py
trading/models/MarketMaker/: dynamic_market_maker.py  market_maker.py
trading/models/OrderEngine/: order_engine.py  order_matching_engine.py
trading/tests/: client_tests.py  conftest.py  heaps_tests.py  market_maker_tests.py  order_engine_tests.py  test_client.py  test_heaps.py  test_market_maker.py  test_order_engine.py  test_order_matching_engine.py  test_yahoo_finance.py
(+6 files in other folders)
